style: fix overflow loading icon

--- a/movie-search/src/assets/stylesheets/components/_search-bar.scss
+++ b/movie-search/src/assets/stylesheets/components/_search-bar.scss
@@ -24,6 +24,7 @@
     #loading-icon{
       width: 1rem;
       height: 1rem;
+      z-index: 5;
     }
   }
 }
